--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "backup": "node backup.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -21,7 +25,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "nodemailer": "^6.9.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.6.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
@@ -29,13 +37,22 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.0",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.54.0",
+    "html-webpack-plugin": "^5.5.1",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "nodemon": "^3.0.1",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.7",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.0"
   },
   "engines": {
     "node": ">=14.0.0"
