fix: atualiza nome do projeto para helper_netto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ia-assistente-flowoff",
+  "name": "helper_netto",
   "version": "1.0.0",
   "description": "IA Assistente para consultorias de marketing digital",
   "main": "server.js",
