build: configura ambiente de produção e deploy
- Adiciona netlify.toml com configurações de build e deploy

- Atualiza webpack.prod.js com otimizações de build

- Atualiza package.json com scripts de build robustos

- Melhora .gitignore com padrões mais abrangentes

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "npm run clean && npm run build:client",
+    "build:client": "webpack --config webpack.prod.js",
+    "clean": "rm -rf dist",
     "test": "jest",
     "lint": "eslint .",
-    "backup": "node backup.js"
+    "backup": "node backup.js",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -40,15 +43,15 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^5.0.0",
-    "dotenv-webpack": "^8.0.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^8.54.0",
-    "html-webpack-plugin": "^5.5.1",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.7.5",
+    "mini-css-extract-plugin": "^2.9.2",
     "nodemon": "^3.0.1",
     "style-loader": "^3.3.3",
-    "terser-webpack-plugin": "^5.3.7",
+    "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.4",
