--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -7,8 +7,8 @@
 /coverage
 
 # Production
-/build
 /dist
+/build
 
 # Misc
 .DS_Store
@@ -17,13 +17,37 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
 # IDE
 .idea/
 .vscode/
 *.swp
-*.swo 
+*.swo
+
+# SSL
+*.pem
+*.key
+*.crt
+
+# Temp files
+*.tmp
+*.temp
+.cache/
+
+# System Files
+.DS_Store
+Thumbs.db 
