--- a/netlify.toml
+++ b/netlify.toml
@@ -1,25 +1,17 @@
 [build]
   command = "npm run build"
   publish = "dist"
-  functions = "functions"
+  base = "/"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_VERSION = "9"
+  NODE_ENV = "production"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[functions]
-  directory = "functions"
-  node_bundler = "esbuild"
-
-[dev]
-  command = "npm run dev"
-  port = 8888
-  publish = "dist"
 
 [[headers]]
   for = "/*"
@@ -27,4 +19,15 @@
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin" 
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[dev]
+  command = "npm run dev"
+  port = 8888
+  publish = "dist"
+  targetPort = 3000
+
+[functions]
+  directory = "functions"
+  node_bundler = "esbuild" 
