--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
@@ -38,7 +42,8 @@
     "react-router-dom": "^6.11.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.6.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
